--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -14,7 +14,7 @@
               <a class="nav-link" routerLink = "/observable">observable</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" routerLink = "/">Information</a>
+              <a class="nav-link" routerLink = "/forms">Forms</a>
             </li>
           </ul>
         </div>
