updated forms driven

--- a/src/app/module/forms/reactive-driven-form/reactive-driven-form.component.html
+++ b/src/app/module/forms/reactive-driven-form/reactive-driven-form.component.html
@@ -84,6 +84,9 @@
           class="btn btn-primary form-control"
         />
       </div>
+      <div>
+        {{reactiveForm.value | json}}
+      </div>
     </div>
   </form>
 </div>
