--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -16,6 +16,9 @@
             <li class="nav-item ">
               <a class="nav-link" routerLink = "/forms">Forms</a>
             </li>
+            <li class="nav-item ">
+              <a class="nav-link" routerLink = "/pipes">Pipes</a>
+            </li>
           </ul>
         </div>
       </nav>
