hook cycle updated

--- a/src/app/module/pipes-exp/pipes-exp.component.html
+++ b/src/app/module/pipes-exp/pipes-exp.component.html
@@ -8,14 +8,14 @@
     <div class="col-md-3">
         <button class="btn btn-secondary form-control" (click)="changenumber(8)">Change number </button>
         <div>
-            <h4>{{'custem Pipes'|titlecase}}</h4>
+            <h4>{{'Pure Pipes'|titlecase}}</h4>
             <p>factorial of {{NumberOf}} is => {{ NumberOf | factorial }}</p>
           </div>
     </div>
     <div class="col-md-3">
-        <button class="btn btn-secondary form-control" (click)="changeUser()">Change number </button>
+        <button class="btn btn-secondary form-control" (click)="changeUser()">Change Object name Property </button>
         <div>
-            <h4>{{'pure Pipes'|titlecase}}</h4>
+            <h4>{{'Impure Pipes'|titlecase}}</h4>
             <p>user {{user}} is => {{ user | typesOfPipes }}</p>
           </div>
     </div>
