updated fork Join

--- a/src/app/common/list-operator/list-operator.component.html
+++ b/src/app/common/list-operator/list-operator.component.html
@@ -63,5 +63,8 @@
        <div class="col-3 m-2 " >
            <a class="btn btn-lg btn-group-toggle btn-secondary form-control" routerLink='zip'> Zip Operator </a>
        </div>
+       <div class="col-3 m-2 " >
+        <a class="btn btn-lg btn-group-toggle btn-secondary form-control" routerLink='forkjoin'> forkjoin Operator </a>
+    </div>
     </div>
    </div>
